[bumpversion]
current_version = 1.2.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/averell/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/conf.py]
search = version = release = '{current_version}'
replace = version = release = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*

[options]
tests_require = pytest

[aliases]
test = pytest

[tool:pytest]
norecursedirs = 
	migrations
python_files = 
	test_*.py
	*_test.py
	tests.py
addopts = 
	-ra
	--strict
	--doctest-modules
	--doctest-glob=\*.rst
	--tb=short
testpaths = 
	tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = averell
default_section = THIRDPARTY
forced_separate = test_averell
not_skip = __init__.py
skip = migrations

[matrix]
python_versions = 
	py37
	py38
dependencies = 
environment_variables = 
	-
